# Thesis-9th-semester

./: .gitignore  AGENT_FULL_THESIS_AND_CODEBASE_CONTEXT.md  CALIBREAD_CODE_PACKAGES.md  CalibRead_research_blueprint.md  FINAL_CONSISTENCY_ISSUES_AND_REPAIR_PLAN.md  Proposal (2).html  REPRODUCIBILITY_ENVIRONMENT.md
calibread_analytics/: .gitignore  PAPER_CLAIM_GUARDRAILS.md  README.md  analysis_config.example.json  analysis_config.parametric.example.json  pyproject.toml
calibread_analytics/tests/: test_analytics.py
calibread_openrouter/: .gitignore  README.md  checkpoint_manifest.example.json  config.example.json  config.parametric_r0_t0_gate.example.json  config.parametric_r0_t2_gate.example.json  config.parametric_t0_temporal.example.json  config.parametric_t2.example.json  pyproject.toml
calibread_openrouter/src/calibread_openrouter/: __init__.py  cli.py  client.py  config.py  grading.py  io.py  parsing.py  prompting.py  provenance.py  runner.py  tasks.py  uncertainty.py
calibread_openrouter/tests/: test_runner.py
calibread_research/: README.md
calibread_research/configs/: run_manifest.template.json
calibread_research/operating_protocols/: 01_TEST_EXECUTION_STANDARD_OPERATING_PROTOCOL.md  02_ANALYSIS_STANDARD_OPERATING_PROTOCOL.md  03_ICLR_PAPER_WRITING_AGENT_PROMPT.md  04_TESTING_CODE_LOGIC_AND_H_INTERPRETATION.md
calibread_research/plans/: 00_master_execution_index.md  00_p03_to_final_crosswalk.md  01_sample_size_and_power_plan.md  02_hypothesis_execution_plan.md  03_results_collection_and_analysis_plan.md  04_week_by_week_26_week_plan.md  (+5 more)
(+45 files in other folders)
